# aps01-api-rest-postgres

./: README.md  pyproject.toml
src/: server.py
src/config/: database.py
src/models/: provas_models.py  resultados_models.py
src/routes/: provas_routes.py  resultados_routes.py
