[tool.poetry]
name = "trabalho-2-bimestre"
version = "0.1.0"
description = "APS final quarto periodo 2023"
authors = ["Lorenzo <lorenzo1324enzo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.104.1"
sqlmodel = "0.0.11"
uvicorn = "0.24.0"
psycopg2-binary = "2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
